--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "jshint": "^2.9.3",
+    "lodash": "^4.17.4",
     "npm-check": "^5.4.0",
     "precommit-hook": "^3.0.0",
     "proxyquire": "^1.7.11",
