--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+      - sqlite3
 before_install:
   - npm i -g npm@^3.0.0
 before_script:
