Print sqlite3 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ addons:
       - gdal-bin
 before_install:
   - npm i -g npm@^3.0.0
+  - sqlite3 --version
 before_script:
   - npm prune
 after_success:
