Try compiling sqlite3

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,27 +13,18 @@ addons:
   apt:
     packages:
       - gdal-bin
-      - ia32-libs
 before_install:
   - npm i -g npm@^3.0.0
-  - which sqlite3
-  - sqlite3 --version
-  - whoami
-  - cd
-  - wget http://sqlite.org/2017/sqlite-tools-linux-x86-3180000.zip
-  - md5sum sqlite-tools-linux-x86-3180000.zip
-  - unzip sqlite-tools-linux-x86-3180000.zip
   - mkdir -p ~/bin
-  - mv sqlite-tools-linux-x86-3180000/sqlite3 ~/bin/sqlite318
+  - wget https://sqlite.org/2017/sqlite-autoconf-3180000.tar.gz
+  - tar xvf sqlite-auto*.tar.gz
+  - pushd sqlite-auto*
+  - ./configure
+  - make -j2
+  - cp ./sqlite3 ~/bin/
   - which sqlite3
-  - ls /home/travis/bin -lh
-  - ls ~/bin -lh
-  - echo $PATH
+  - popd
   - sqlite3 --version
-  - pwd
-  - /home/travis/bin/sqlite318 --version
-  - bash -c "/home/travis/bin/sqlite318 --version"
-  - cd -
 before_script:
   - npm prune
 after_success:
